src/test/ui/reachable/expr_return.stderr
error: unreachable expression
  --> $DIR/expr_return.rs:10:22
   |
LL |     let x = {return {return {return;}}};
   |                      ^^^^^^^^------^^
   |                      |       |
   |                      |       any code following this expression is unreachable
   |                      unreachable expression
   |
note: lint level defined here
  --> $DIR/expr_return.rs:4:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^

error: aborting due to previous error

